Implement remove statue & update design

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,13 +3,13 @@
 <head>
   <% include partials/head %>
 </head>
-<body class="container">
+<body>
   <main>
     <div class="jumbotron text-center">
       <h1>Login</h1>
       <p>Welcome to Invisible Cities</p>
     </div>
-    <form action="/login" method="post">
+    <form class="container col-sm-6" action="/login" method="post">
       <div class="form-group">
         <label for="emailInput">Email address</label>
         <input type="email" name="email" class="form-control" id="emailInput" placeholder="Enter email" required>
