--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,17 @@
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">
-    <img src="/assets/images/aegt.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-    Invisible Cities
-  </a>
-  <a href="/logout">Logout</a>
-</nav>
+<header>
+  <nav class="navbar navbar-light gt-navbar">
+    <div class="logo-container col-sm-3">
+      <a class="navbar-brand" href="http://arts.gatech.edu/">
+        <img src="/assets/images/gt-arts-logo-solid-white.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      </a>
+    </div>
+    <div class="col-sm-6 text-center">
+      <a href="/">
+        <h1>Invisible Cities</h1>
+      </a>
+    </div>
+    <div class="col-sm-3">
+      <a href="/logout" class="btn btn-light btn-logout">Logout</a>
+    </div>
+  </nav>
+</header>
