--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
   <% include partials/head %>
 </head>
 <body>
-  <% include partials/header %>
+  <%- include('partials/header', { hasLoggedIn: false }) %>
   <main>
     <div class="jumbotron text-center">
       <h1>Login</h1>
