--- a/scss/statueList.scss
+++ b/scss/statueList.scss
@@ -9,3 +9,13 @@ form {
 .card-container {
   margin-bottom: 2rem;
 }
+.statue-info {
+  margin: 0;
+  span {
+    color: #721c24;
+    font-weight: bold;
+  }
+}
+.button-container {
+  text-align: right;
+}
