--- a/views/statueList.ejs
+++ b/views/statueList.ejs
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="/css/statueList.css">
 </head>
 <body>
-  <%- include('partials/header', { hasLoggedIn: true }) %>
+  <%- include('partials/header') %>
   <main>
     <div class="jumbotron text-center">
       <h1>Statue Lists</h1>
@@ -20,10 +20,23 @@
                 <h5 class="card-title"><%= statues[sId].name %></h5>
                 <h6 class="card-subtitle mb-2 text-muted"><%= statues[sId].statueAsset %></h6>
                 <p class="card-text"><%= statues[sId].description %></p>
-                <form action="/statue" method="post">
-                  <input type="hidden" name="statueId" value="<%= sId %>">
-                  <button type="submit" class="btn alert-danger remove-btn" data-statue-name="<%= statues[sId].name %>">Remove</button>
-                </form>
+                <div class="statue-info-container">
+                  <p class="statue-info">Like: <span><%= statues[sId].like %></span></p>
+                  <p class="statue-info">Dislike: <span><%= statues[sId].dislike %></span></p>
+                  <p class="statue-info">Flagged: <span><%= statues[sId].isFlagged === 1 %></span></p>
+                </div>
+                <div class="button-container">
+                  <form action="/statue" method="post">
+                    <input type="hidden" name="statueId" value="<%= sId %>">
+                    <button id="removeBtn" type="submit" class="btn alert-danger remove-btn" data-statue-name="<%= statues[sId].name %>">Remove</button>
+                  </form>
+                  <form action="/statue-flag" method="post">
+                    <input type="hidden" name="statueId" value="<%= sId %>">
+                    <button id="flagBtn" type="submit" class="btn alert-danger remove-btn" data-statue-name="<%= statues[sId].name %>">
+                      <%= statues[sId].isFlagged === 1 ? 'Unflag' : 'Flag' %>
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
@@ -35,13 +48,13 @@
 </body>
 <script type="text/javascript">
   $(document).ready(function() {
-    $('form').click(function(ev) {
+    $('#removeBtnForm').click(function(ev) {
       ev.preventDefault();
       let errMsg = 'Are you sure that you want to delete statue:' + ev.target.dataset['statueName'] + '?';
       if (confirm(errMsg)) {
         $(this).unbind('submit').submit();
       }
-    })
+    });
   })
 </script>
 </html>
