--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-light gt-navbar">
+  <section class="navbar gt-navbar">
     <div class="logo-container col-sm-3">
       <a class="navbar-brand" href="http://arts.gatech.edu/">
         <img src="/assets/images/gt-arts-logo-solid-white.png" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -15,5 +15,13 @@
         <a href="/logout" class="btn btn-light btn-logout">Logout</a>
       <% } %>
     </div>
-  </nav>
+  </section>
+  <section class="navbar menu-navbar">
+    <div class="container">
+      <ul>
+        <li><a class="btn" href="/">Statues</a></li>
+        <li><a class="btn" href="/campus-map">Campus Map</a></li>
+      </ul>
+    </div>
+  </section>
 </header>
