Remove statue and toggle flag from map marker

--- a/scss/campus-map.scss
+++ b/scss/campus-map.scss
@@ -1,4 +1,10 @@
+main {
+  margin-bottom: 3em;
+}
 #map {
-  height: 400px;
+  height: 700px;
   width: 100%;
  }
+.card-img-top {
+  max-width: 100%;
+}
