--- a/public/css/campus-map.css
+++ b/public/css/campus-map.css
@@ -1,3 +1,9 @@
+main {
+  margin-bottom: 3em; }
+
 #map {
-  height: 400px;
+  height: 700px;
   width: 100%; }
+
+.card-img-top {
+  max-width: 100%; }
