--- a/views/campus-map.ejs
+++ b/views/campus-map.ejs
@@ -3,6 +3,7 @@
 <head>
   <% include partials/head %>
   <link rel="stylesheet" href="/css/campus-map.css">
+  <link rel="stylesheet" href="/css/statueList.css">
 </head>
 <body>
   <%- include('partials/header') %>
@@ -18,35 +19,121 @@
   </main>
   <% include partials/footer %>
 </body>
-  <script>
-    function initMap() {
-      const map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 15,
-        center: {
-          lat: 33.777993,
-          lng: -84.398108
+<script>
+
+    $('#map').on('submit', '.statue-flag-form', function(ev) {
+      ev.preventDefault();
+      const $this = $(ev.target);
+      const statueId = $this.find('input[name=statueId]').val();
+      const isFlagged = $this.find('input[name=isFlagged]').val();
+      $.ajax({
+        url: '/statue-flag',
+        method: 'POST',
+        data: {
+          isFlagged: isFlagged,
+          statueId: statueId,
+          isJson: 1
+        },
+        success: function(data) {
+          const statueId = data.statueId;
+          const $statueCard = $('#statue-' + statueId);
+          $statueCard.find('.flag')[0].innerText = data.isFlagged;
+          $statueCard.find('.flag-btn')[0].innerText = data.isFlagged ? 'Unflag' : 'Flag';
+          $statueCard.find('input[name=isFlagged]').val(data.isFlagged ? 1 : 0);
+        },
+        error: function(xhr) {
+
         }
       });
-      let marker;
-      <% Object.keys(maps).forEach((m, i) => { %>
-        marker = new google.maps.Marker({
-          position: {
-            lat: <%= maps[m].lat %>,
-            lng: <%= maps[m].lng %>
-          },
-          map: map
-        });
-      <% }) %>
+    });
 
-      google.maps.event.addListener(marker, 'mouseover', (function(marker, i) {
-        return function() {
-          infowindow.setContent(locations[i][0]);
-          infowindow.open(map, marker);
+    $('#map').on('submit', '.statue-remove-form', function(ev) {
+      ev.preventDefault();
+      const $this = $(ev.target);
+      const statueId = $this.find('input[name=statueId]').val();
+      $.ajax({
+        url: '/statue',
+        method: 'POST',
+        data: {
+          statueId: statueId,
+          isJson: 1
+        },
+        success: function(data) {
+          location.reload();
+        },
+        error: function(xhr) {
+
         }
-      })(marker, i));
+      });
+    });
 
-    }
-  </script>
+  function initMap() {
+    const map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 15,
+      center: {
+        lat: 33.777993,
+        lng: -84.398108
+      }
+    });
+    let marker;
+    <% Object.keys(maps).forEach((m, i) => { %>
+      marker = new google.maps.Marker({
+        position: {
+          lat: <%= maps[m].lat %>,
+          lng: <%= maps[m].lng %>
+        },
+        map: map,
+        id: <%= m %>
+      });
+
+      marker.addListener('mouseover', (function(marker, i) {
+        marker = this;
+        $.ajax({
+          url: '/statue/' + marker.id,
+          success: function(data) {
+            const statue = data.statue;
+            const str =
+              '<div class="card" ' + ' id="statue-' + marker.id + '"' + '>' +
+                '<img class="card-img-top" src="' + statue.image + '" alt="' + statue.name + '">' +
+                '<div class="card-body">' +
+                  '<h5 class="card-title">' + statue.name + '</h5>' +
+                  '<h6 class="card-subtitle mb-2 text-muted">' + statue.statueAsset + '</h6>' +
+                  '<p class="card-text">' + statue.description + '</p>' +
+                  '<div class="statue-info-container">' +
+                    '<p class="statue-info">Like: <span>' + statue.like + '</span></p>' +
+                    '<p class="statue-info">Dislike: <span>' + statue.dislike + '</span></p>' +
+                    '<p class="statue-info">Flagged: <span class="flag">' + (statue.isFlagged === 1) + '</span></p>' +
+                  '</div>' +
+                  '<div class="button-container">' +
+                    '<form class="statue-remove-form" action="/statue" method="post">' +
+                      '<input type="hidden" name="statueId" value="' + marker.id + '">' +
+                      '<button class="remove-btn btn alert-danger" type="submit" class="btn alert-danger remove-btn" data-statue-name="' + statue.name + '">Remove</button>' +
+                    '</form>' +
+                    '<form class="statue-flag-form" action="/statue-flag" method="post">' +
+                      '<input type="hidden" name="statueId" value="' + marker.id + '">' +
+                      '<input type="hidden" name="isFlagged" value="' + statue.isFlagged + '">' +
+                      '<button class="flag-btn btn alert-danger" type="submit" class="btn alert-danger remove-btn" data-statue-name="' + statue.name + '">' +
+                        (statue.isFlagged === 1 ? 'Unflag' : 'Flag') +
+                      '</button>' +
+                    '</form>' +
+                  '</div>' +
+                '</div>' +
+              '</div>';
+            const infowindow = new google.maps.InfoWindow({
+              content: str
+            });
+            infowindow.open(map, marker);
+          },
+          error: function(xhr) {
+
+          }
+        });
+      }));
+    <% }) %>
+
+
+  }
+</script>
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-126jQxDJMWuci63ka1o_NtHoWogIudk&callback=initMap">
   </script>
