--- a/views/campus-map.ejs
+++ b/views/campus-map.ejs
@@ -21,6 +21,7 @@
 </body>
 <script>
 
+  $(document).ready(function() {
     $('#map').on('submit', '.statue-flag-form', function(ev) {
       ev.preventDefault();
       const $this = $(ev.target);
@@ -37,9 +38,35 @@
         success: function(data) {
           const statueId = data.statueId;
           const $statueCard = $('#statue-' + statueId);
-          $statueCard.find('.flag')[0].innerText = data.isFlagged;
+          $statueCard.find('.text-flag')[0].innerText = data.isFlagged;
           $statueCard.find('.flag-btn')[0].innerText = data.isFlagged ? 'Unflag' : 'Flag';
-          $statueCard.find('input[name=isFlagged]').val(data.isFlagged ? 1 : 0);
+          $statueCard.find('input[name=isFlagged]').val(data.isFlagged);
+        },
+        error: function(xhr) {
+
+        }
+      });
+    });
+
+    $('#map').on('submit', '.statue-private-form', function(ev) {
+      ev.preventDefault();
+      const $this = $(ev.target);
+      const statueId = $this.find('input[name=statueId]').val();
+      const isPrivate = $this.find('input[name=isPrivate]').val();
+      $.ajax({
+        url: '/statue-private',
+        method: 'POST',
+        data: {
+          isPrivate: isPrivate,
+          statueId: statueId,
+          isJson: 1
+        },
+        success: function(data) {
+          const statueId = data.statueId;
+          const $statueCard = $('#statue-' + statueId);
+          $statueCard.find('.text-private')[0].innerText = data.isPrivate ? 'Private' : 'Public';
+          $statueCard.find('.private-btn')[0].innerText = data.isPrivate ? 'Set public' : 'Set private';
+          $statueCard.find('input[name=isPrivate]').val(data.isPrivate);
         },
         error: function(xhr) {
 
@@ -67,6 +94,8 @@
       });
     });
 
+  });
+
   function initMap() {
     const map = new google.maps.Map(document.getElementById('map'), {
       zoom: 15,
@@ -79,11 +108,11 @@
     <% Object.keys(maps).forEach((m, i) => { %>
       marker = new google.maps.Marker({
         position: {
-          lat: <%= maps[m].lat %>,
-          lng: <%= maps[m].lng %>
+          lat: <%= maps[m].latitude %>,
+          lng: <%= maps[m].longitude %>
         },
         map: map,
-        id: <%= m %>
+        id: "<%= m %>"
       });
 
       marker.addListener('mouseover', (function(marker, i) {
@@ -102,19 +131,31 @@
                   '<div class="statue-info-container">' +
                     '<p class="statue-info">Like: <span>' + statue.like + '</span></p>' +
                     '<p class="statue-info">Dislike: <span>' + statue.dislike + '</span></p>' +
-                    '<p class="statue-info">Flagged: <span class="flag">' + (statue.isFlagged === 1) + '</span></p>' +
+                    '<div class="option-container">' +
+                      '<span class="statue-info">Flagged: <span class="text-flag">' + statue.isFlagged + '</span></span>' +
+                      '<form class="statue-flag-form" action="/statue-flag" method="post">' +
+                        '<input type="hidden" name="statueId" value="' + marker.id + '">' +
+                        '<input type="hidden" name="isFlagged" value="' + statue.isFlagged + '">' +
+                        '<button class="flag-btn btn alert-danger" type="submit" class="btn alert-danger remove-btn" data-statue-name="' + statue.name + '">' +
+                        (statue.isFlagged ? 'Unflag' : 'Flag') +
+                        '</button>' +
+                      '</form>' +
+                    '</div>' +
+                    '<div class="option-container">' +
+                      '<span class="statue-info"><span class="text-private">' + (statue.isPrivate ? 'Private' : 'Public') + '</span></span>' +
+                      '<form class="statue-private-form" action="/statue-private" method="post">' +
+                        '<input type="hidden" name="statueId" value="' + marker.id + '">' +
+                        '<input type="hidden" name="isPrivate" value="' + statue.isPrivate + '">' +
+                        '<button class="private-btn btn alert-danger" type="submit" class="btn alert-danger remove-btn" data-statue-name="' + statue.name + '">' +
+                        (statue.isPrivate ? 'Set public' : 'Set private') +
+                        '</button>' +
+                      '</form>' +
+                    '</div>' +
                   '</div>' +
                   '<div class="button-container">' +
                     '<form class="statue-remove-form" action="/statue" method="post">' +
                       '<input type="hidden" name="statueId" value="' + marker.id + '">' +
                       '<button class="remove-btn btn alert-danger" type="submit" class="btn alert-danger remove-btn" data-statue-name="' + statue.name + '">Remove</button>' +
-                    '</form>' +
-                    '<form class="statue-flag-form" action="/statue-flag" method="post">' +
-                      '<input type="hidden" name="statueId" value="' + marker.id + '">' +
-                      '<input type="hidden" name="isFlagged" value="' + statue.isFlagged + '">' +
-                      '<button class="flag-btn btn alert-danger" type="submit" class="btn alert-danger remove-btn" data-statue-name="' + statue.name + '">' +
-                        (statue.isFlagged === 1 ? 'Unflag' : 'Flag') +
-                      '</button>' +
                     '</form>' +
                   '</div>' +
                 '</div>' +
@@ -130,8 +171,6 @@
         });
       }));
     <% }) %>
-
-
   }
 </script>
   <script async defer
