--- a/views/partials/statueCard.ejs
+++ b/views/partials/statueCard.ejs
@@ -7,19 +7,31 @@
     <div class="statue-info-container">
       <p class="statue-info">Like: <span><%= statue.like %></span></p>
       <p class="statue-info">Dislike: <span><%= statue.dislike %></span></p>
-      <p class="statue-info">Flagged: <span><%= statue.isFlagged === 1 %></span></p>
+      <div class="option-container">
+        <span class="statue-info">Flagged: <span class="text-flag"><%= statue.isFlagged %></span></span>
+        <form action="/statue-flag" method="post">
+          <input type="hidden" name="statueId" value="<%= statueId %>">
+          <input type="hidden" name="isFlagged" value="<%= statue.isFlagged %>">
+          <button type="submit" class="flag-btn btn alert-danger" data-statue-name="<%= statue.name %>">
+            <%= statue.isFlagged ? 'Unflag' : 'Flag' %>
+          </button>
+        </form>
+      </div>
+      <div class="option-container">
+        <span class="statue-info"><span class="text-private"><%= statue.isPrivate ? 'Private' : 'Public' %></span></span>
+        <form action="/statue-private" method="post">
+          <input type="hidden" name="statueId" value="<%= statueId %>">
+          <input type="hidden" name="isPrivate" value="<%= statue.isPrivate %>">
+          <button type="submit" class="private-btn btn alert-danger" data-statue-name="<%= statue.name %>">
+            <%= statue.isPrivate ? 'Set public' : 'Set private' %>
+          </button>
+        </form>
+      </div>
     </div>
     <div class="button-container">
       <form action="/statue" method="post">
         <input type="hidden" name="statueId" value="<%= statueId %>">
         <button id="removeBtn" type="submit" class="btn alert-danger remove-btn" data-statue-name="<%= statue.name %>">Remove</button>
-      </form>
-      <form action="/statue-flag" method="post">
-        <input type="hidden" name="statueId" value="<%= statueId %>">
-        <input type="hidden" name="isFlagged" value="<%= statue.isFlagged %>">
-        <button id="flagBtn" type="submit" class="btn alert-danger remove-btn" data-statue-name="<%= statue.name %>">
-          <%= statue.isFlagged === 1 ? 'Unflag' : 'Flag' %>
-        </button>
       </form>
     </div>
   </div>
