Update statue image field name

--- a/views/campus-map.ejs
+++ b/views/campus-map.ejs
@@ -123,7 +123,7 @@
             const statue = data.statue;
             const str =
               '<div class="card" ' + ' id="statue-' + marker.id + '"' + '>' +
-                '<img class="card-img-top" src="' + statue.image + '" alt="' + statue.name + '">' +
+                '<img class="card-img-top" src="' + statue.statuePreviewPicURL + '" alt="' + statue.name + '">' +
                 '<div class="card-body">' +
                   '<h5 class="card-title">' + statue.name + '</h5>' +
                   '<h6 class="card-subtitle mb-2 text-muted">' + statue.statueAsset + '</h6>' +
