--- a/public/css/statueList.css
+++ b/public/css/statueList.css
@@ -2,6 +2,9 @@
   margin-right: 1rem;
   float: left;
   width: 100%; }
+  .card .image-container {
+    background-color: #ccc;
+    min-height: 180px; }
 
 form {
   display: inline-block; }
