--- a/scss/statueList.scss
+++ b/scss/statueList.scss
@@ -2,6 +2,10 @@
   margin-right: 1rem;
   float: left;
   width: 100%;
+  .image-container {
+    background-color: #ccc;
+    min-height: 180px;
+  }
 }
 form {
   display: inline-block;
