--- a/views/partials/statueCard.ejs
+++ b/views/partials/statueCard.ejs
@@ -1,5 +1,7 @@
 <div class="card">
-  <img class="card-img-top" src="<%= statue.image %>" alt="<%= statue.name %>">
+  <div class="image-container">
+    <img class="card-img-top" src="<%= statue.statuePreviewPicURL %>" alt="<%= statue.name %>">
+  </div>
   <div class="card-body">
     <h5 class="card-title"><%= statue.name %></h5>
     <h6 class="card-subtitle mb-2 text-muted"><%= statue.statueAsset %></h6>
