Vue in progress

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,3 +12,6 @@
 
 <link rel="stylesheet" href="/css/common.css">
 <link rel="shortcut icon" href="/assets/images/favicon.ico">
+
+<!-- Vue -->
+<script src="https://cdn.jsdelivr.net/npm/vue"></script>
