--- a/views/partials/statueCard.ejs
+++ b/views/partials/statueCard.ejs
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="image-container">
-    <img class="card-img-top" src="<%= statue.statuePreviewPicURL %>" alt="<%= statue.name %>">
+    <img class="card-img-top" src="<%= previewPicURL %>" alt="<%= statue.name %>">
   </div>
   <div class="card-body">
     <h5 class="card-title"><%= statue.name %></h5>
