--- a/views/statueList.ejs
+++ b/views/statueList.ejs
@@ -13,8 +13,13 @@
     <div class="container">
       <div class="row">
         <% for (let sId in statues) { %>
+          <% const previewPicURL = statues[sId].statuePreviewPicURL; %>
           <div class="card-container col-md-6 col-lg-4">
-            <%- include('partials/statueCard', { statue: statues[sId], statueId: sId }) %>
+            <%- include('partials/statueCard', {
+              statue: statues[sId],
+              statueId: sId,
+              previewPicURL: previewPicURL.substr(0, 95) + '%2f' + previewPicURL.substr(96)
+            }) %>
           </div>
         <% } %>
       </div>
