Rename scss files for naming convention

--- a/views/campusMap.ejs
+++ b/views/campusMap.ejs
@@ -3,7 +3,7 @@
 <head>
   <% include partials/head %>
   <link rel="stylesheet" href="/css/campus-map.css">
-  <link rel="stylesheet" href="/css/statueList.css">
+  <link rel="stylesheet" href="/css/statue-list.css">
 </head>
 <body>
   <%- include('partials/header') %>
