--- a/views/statueList.ejs
+++ b/views/statueList.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <% include partials/head %>
-  <link rel="stylesheet" href="/css/statueList.css">
+  <link rel="stylesheet" href="/css/statue-list.css">
 </head>
 <body>
   <%- include('partials/header') %>
