Update README for standardized deployment instructions

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
   <section class="navbar gt-navbar">
     <div class="logo-container col-sm-3">
       <a class="navbar-brand" href="http://arts.gatech.edu/">
-        <img src="/assets/images/gt-arts-logo-solid-white.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="/assets/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
       </a>
     </div>
     <div class="col-sm-6 text-center">
