--- a/views/campusMap.ejs
+++ b/views/campusMap.ejs
@@ -101,6 +101,7 @@
 
   });
 
+ 
   function initMap() {
     const map = new google.maps.Map(document.getElementById('map'), {
       zoom: 15,
@@ -453,10 +454,7 @@
                   '</div>' +
                 '</div>' +
               '</div>';
-            const infowindow = new google.maps.InfoWindow({
-              content: str
-            });
-            infowindow.open(map, marker);
+            
           },
           error: function(xhr) {
 
@@ -464,7 +462,40 @@
         });
       }));
     <% }) %>
+
+
+const infoWindow = new google.maps.InfoWindow;
+      // Try HTML5 geolocation.
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+          var pos = {
+            lat: position.coords.latitude,
+            lng: position.coords.longitude
+          };
+
+          infoWindow.setPosition(pos);
+          infoWindow.setContent('Location found.');
+          infoWindow.open(map);
+          map.setCenter(pos);
+        }, function() {
+          handleLocationError(true, infoWindow, map.getCenter());
+        });
+      } else {
+        // Browser doesn't support Geolocation
+        handleLocationError(false, infoWindow, map.getCenter());
+      }
+    
+
+    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+      infoWindow.setPosition(pos);
+      infoWindow.setContent(browserHasGeolocation ?
+                            'Error: The Geolocation service failed.' :
+                            'Error: Your browser doesn\'t support geolocation.');
+      infoWindow.open(map);
+    }
+        
   }
+
 </script>
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=<%= process.env.NODE_ENV === 'production' ? 'AIzaSyDAoa3AC0rswHP4W5R17Po4UQqTEWeqstg' : 'AIzaSyC-126jQxDJMWuci63ka1o_NtHoWogIudk'  %>&callback=initMap">
